# pip_--race

./: .gitattributes  Dockerfile  README.md  setup.md
bridge-service/: package-lock.json  package.json  server.js
frontend/: README.md  index.html  package-lock.json  package.json  script.js  style.css  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: BoxWindow.jsx  CarCard.jsx  Navigation.jsx  PitProbabilities.jsx  RaceInfo.jsx  TrackMap.jsx
frontend/src/hooks/: usePitProbabilities.js  useRouter.js  useWebSocket.js
frontend/src/pages/: AboutPage.jsx  LiveRacePage.jsx  StrategyPage.jsx
frontend/src/styles/: global.css
pit_timer_backend/: .dockerignore  Cargo.toml
pit_timer_backend/src/: config.rs  main.rs  model.rs
pit_timer_backend/src/tracks/: monaco.json
rival-boxing/: dump.rdb
rival-boxing/artifacts/models/: booster_h.json  booster_t.json  meta.json  (+4 more)
rival-boxing/ingest/: feeder_fastf1_cache.py
rival-boxing/rt_predictor/: Cargo.toml
rival-boxing/rt_predictor/src/: main.rs  model.rs  types.rs
rival-boxing/scripts/: export_to_onnx.py  export_torchscript.py  export_torchscript_20.py  export_torchscript_26.py  predict_qrdqn.py  predict_qrdqn_multidriver.py  predict_qrdqn_per_driver_plots.py  publish_probs.py  test_server.py  verify_dimensions.py
rival-boxing/trainer/: requirements.txt  train_qrdqn.py
telemetry_feed/: Dockerfile  SPEED_PROFILE_README.md  calc_rows  requirements.txt  speed_profile_calculator.py  speed_profile_calculator.rs  telemetry_feed.py  test_speed_profile.py
telemetry_feed/tests/: integration_tests.rs
(+42 files in other folders)
